# PortOps

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: diagnostic_run.py  validate-submission.sh
server/: __init__.py  app.py
tests/: test_api.py  test_env.py
